# mitchty.github.io

./: .envrc  Cargo.toml  flake.nix  index.html  readme.org
.github/workflows/: deploy.yaml
crates/mitchty/: Cargo.toml
crates/mitchty/src/: assets.rs  main.rs  ui.rs
